--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
     "autoprefixer": "^10.4.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.69.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
