--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,8 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
+    "react-select-country-list": "^2.2.3",
     "sass": "^1.69.4",
     "web-vitals": "^2.1.4"
   },
