--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "react-select-country-list": "^2.2.3",
+    "react-spinners": "^0.13.8",
     "sass": "^1.69.4",
     "web-vitals": "^2.1.4"
   },
